# gan-vs-transformerSOTIS

./: README.md
GANcode/: cGAN.ipynb
Tansformers code/2TMTNewLoss/code/: fullEvaluationSotis.py  graficoGAN.py  prueba.py  train_TMT_dynamic_2stage.py  train_TMT_static.py  train_tilt_dynamic.py
Tansformers code/2TMTNewLoss/code/data/: dataset_video_train.py
Tansformers code/2TMTNewLoss/code/model/: UNet3d_TMT.py
Tansformers code/3addingMeanTMT/scriptsCleanGithub/: findBest10ImgImprov.py  fullEvaluationSotis.py
Tansformers code/TMT original/originalTMTwithSotis/: readmeSEB.txt
Tansformers code/mambaBestResult/MAMAT-main/: .gitignore  Dockerfile  Originaldockerfile  README.md  pyproject.toml  runContainer.sh  works Dockerfile copy
Tansformers code/mambaBestResult/MAMAT-main/code/: fullEvaluationSotis.py  resutladoFullEvalwithmambadefOn.txt  test.py  test_folder.py  train.py
Tansformers code/mambaBestResult/MAMAT-main/code/FD/: FD_LOSS_Model.py  ViTForRegression.py  fd_loss.py  net_canny.py  test_fd_loss.py
Tansformers code/mambaBestResult/MAMAT-main/code/data/: convertDataset.py  datasetVideoEvaluation.py  dataset_video_train.py
Tansformers code/mambaBestResult/MAMAT-main/code/model/: DefConv.py  SwinUnet_3D.py  TMT_DC.py  nnMamba.py
Tansformers code/mambaBestResult/MAMAT-main/code/utils/: general.py  losses.py  runOverSpecificImages.py  scheduler.py  utils_image.py
TransformerModel/: fullEvaluationSotis.py  train_TMT_static.py
TransformerModel/data/: datasetEvaluation.py
TransformerModel/model/: TMT.py
(+19 files in other folders)
