[tool.poetry]
name = "dat"
version = "0.1.0"
description = "DASAD3"
authors = ["Paul Hill <paul.hill@bristol.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
av = "11.0.0"
decord = "0.6.0"
deepspeed = "0.13.1"
einops = "0.7.0"
ftfy = "6.1.3"
fvcore = "0.1.5.post20221221"
imageio = "2.33.1"
lm-eval = "0.4.1"
numpy = "1.26.4"
omegaconf = "2.3.0"
opencv-python = "4.8.1.78"
packaging = "24.0"
pandas = "2.2.1"
pillow = "10.1.0"
pytest = "8.1.1"
PyYAML = "6.0.1"
regex = "2023.10.3"
requests = "2.31.0"
scipy = "1.12.0"
setuptools = "68.2.2"
submitit = "1.5.1"
tensorboardX = "2.6.2.2"
tensorflow = "2.16.1"
termcolor = "2.4.0"
timm = "0.4.12"
apex = "*"
tqdm = "4.66.1"
transformers = "4.36.1"
wandb = "0.16.2"
wheel = "0.42.0"
xformers = "0.0.24"
scikit-image = "^0.23.2"
pudb = "^2024.1"
matplotlib = "^3.9.0"
torchmetrics = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
